--- a/index.ipynb
+++ b/index.ipynb
@@ -50,15 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "29\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "# remember pow(x, p-2, p) is the same as 1/x in F_p\n",
     "prime = 31\n",
     "# 3/24 = ?\n",
+    "print(3*24**(prime-2) % prime)\n",
     "# 17^(-3) = ?\n",
-    "# 4^(-4)*11 = ?"
+    "print(pow(17,prime-4, prime))\n",
+    "# 4^(-4)*11 = ?\n",
+    "print(pow(4, prime-5, prime) *11 % prime)"
    ]
   },
   {
@@ -122,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
